<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.comunidad.Comunidad_mis_recetasFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo_cocinarte"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/star_22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Search Bar and Filter Button Row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <!-- Search Bar -->
        <androidx.cardview.widget.CardView
            android:id="@+id/search_card"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_bar_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="¿Que te gustaría el día de hoy?..."
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColorHint="@color/verde"
                    android:textSize="17sp" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="2dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/barra_de_busqueda"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Filter Button -->
        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/filtro"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ScrollView principal que contendrá TODO el contenido desplazable -->
    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/search_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <!-- Segment Control Button for Comunidad/Mis recetas -->
            <androidx.cardview.widget.CardView
                android:id="@+id/segment_control"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_row">


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <!-- Comunidad Tab -->
                    <LinearLayout
                        android:id="@+id/comunidad_tab"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/comunida" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Comunidad"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Mis recetas Tab -->
                    <LinearLayout
                        android:id="@+id/mis_recetas_tab"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:background="@color/verde"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/recetas_mias" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mis recetas"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <!-- Perfil de usuario -->
            <LinearLayout
                android:id="@+id/profile_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!-- Imagen de perfil circular -->
                    <ImageView
                        android:id="@+id/user_profile_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher_round"
                        android:contentDescription="@string/profile_image_desc"
                        android:background="@drawable/circle_background" />

                    <ImageButton
                        android:id="@+id/btn_change_image"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="4dp"
                        android:background="@drawable/circle_button_background"
                        android:padding="6dp"
                        android:src="@drawable/ic_add_image"
                        android:contentDescription="@string/change_profile_image"
                        android:elevation="4dp"
                        app:tint="#BFBFBF" />
                </FrameLayout>

                <!-- Correo electrónico -->
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:text="cristiancl7@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <!-- Nombre de usuario -->
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cristian015"
                    android:textColor="@color/gris"
                    android:textSize="14sp" />
            </LinearLayout>


            <!-- Botón Crear Receta -->
            <Button
                android:id="@+id/btn_crear_receta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/verde"
                android:text="Crear receta"
                android:textColor="@android:color/white" />

            <!-- Contenedor de recetas -->
            <LinearLayout
                android:id="@+id/contenedor_recetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>